--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
   <groupId>com.squareup.retrofit</groupId>
   <artifactId>parent</artifactId>
-  <version>1.9.0</version>
+  <version>1.9.0-ai</version>
   <packaging>pom</packaging>
 
   <name>Retrofit (Parent)</name>
